--- a/.gitignore
+++ b/.gitignore
@@ -3055,3 +3055,5 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+dist/
+.cache/
